# AlphaZero-Renju

./: .bazeliskrc  .bazelrc  .gitignore  .gitmodules  LICENSE  MTCS.py  README  README.md  WORKSPACE  agent.py  board.py  conf.py  game.py  gym_renjy.py  log_util.py  main.py  mcts.py  model.py  play.py  producer.py  requements.txt  requirements.txt  setting.py  train.py  trainer.py  utils.py
.github/workflows/: main.yml
az/: .bazelrc  WORKSPACE  board.cpp
az/codelab/: load_graph.cpp  save_pb.cpp
az/conf/: conf.pbtxt  test.pbtxt
az/py/: conf.py  data.pkl  graph.pb.data-00000-of-00001  graph.pb.index
az/test/: BUILD.bazel  test_model.cpp
conf/: BUILD  conf.pbtxt  conf.proto  graph.pbtxt  test0.pbtxt  test_tf.pbtxt
cpp/: .bazelrc  BUILD  README.md  WORKSPACE  board.cpp  board.h  examiner.cpp  examiner.h  main.h  model.cpp  model.h  producer.cpp  producer.h  repo.bzl  tf_utils.cpp  tf_utils.h  trainer.cpp  trainer.h
cpp/codelab/: BUILD.bazel  cnn.cpp  load_graph.cpp  load_model.cpp  model.cpp  save_model.cpp  saved_model.pb  train.cpp  train_example.cpp
cpp/conf/: BUILD  conf.proto  configure.proto  configure.txt
cpp/conf/graph/: model
cpp/docker/: Dockerfile
cpp/model/: saved_model.pb
cpp/model/variables/: variables.data-00000-of-00001  variables.index
cpp/py/: BUILD.bazel  learn_tf.py  model.py  py_model.py  train_example.py
cpp/py/model/: BUILD.bazel
cpp/py/play/: BUILD.bazel  play.py  test_bind.py
cpp/src/: BUILD.bazel  board.cpp  board.h  engine.cpp  engine.h  examiner.cpp  examiner.h  instance.h  main.cpp  main.h  model.cpp  model.h  model_manager.cpp  model_manager.h  pit.cpp  pit.h  producer.cpp  producer.h  py_interface.cpp  py_interface.h  py_interface_pybind.cpp  resource_manager.cpp  resource_manager.h  trainer.cpp  trainer.h
cpp/src/data_structure/: BUILD.bazel  data_structure.cpp  data_structure.h
cpp/src/strategy/: BUILD.bazel  expert.h  experts.cpp  experts.h  mcts_strategy.cpp  mcts_strategy.h  model_expert.cpp  model_expert.h  random_expert.cpp  random_expert.h  random_strategy.cpp  random_strategy.h  strategy.cpp  strategy.h
cpp/src/utils/: BUILD.bazel  dirichlet.h  fixed_deque.h  matrix.cpp  matrix.h  protobuf_utils.cpp  protobuf_utils.h  thread.h  thread_pool.h
cpp/test/: BUILD.bazel  test_board.cpp  test_conf.cpp  test_dirichlet.cpp  test_eigen.cpp  test_glog.cpp  test_mcts.cpp  test_model.cpp  test_play.cpp  test_spdlog.cpp  test_train.cpp  test_train_example.cpp
cpp/utils/: BUILD.bazel  fixed_deque.h  protobuf_utils.h  thread.h
cpp/weights/predict/: weights.data-00000-of-00001  weights.index
cpp/weights/train/: weights.data-00000-of-00001  weights.index
images/: t.py
model/: params.h5  renju.params
py/: checkpoint  model.py  producer.py
py/graph/: model
py/images/: BUILD.bazel
py/src/: BUILD.bazel  board.py  conf.py  mcts.py  model.py  play.py  producer.py  train.py  utils.py
py/test/: BUILD.bazel  test_numpy.py  test_pip.py
