package(default_visibility = ["//visibility:public"])

# py_binary(
#     name = "learn_tf",
#     srcs = ["learn_tf.py"],
#     deps = [requirement("tensorflow")],
# )

# py_binary(
#     name = "train_example",
#     srcs = ["train_example.py"],
#     deps = [requirement("tensorflow")],
# )

py_binary(
    name = "py_model",
    srcs = ["py_model.py"],
    data = [
        "//conf:conf_file",
    ],
    deps = [
        "//conf:conf_py_proto",
    ],
)
