package(default_visibility = ["//visibility:public"])

cc_library(
    name = "board",
    srcs = [
        "board.cpp",
        "board.h",
    ],
    deps = [
        "//conf:conf_cc_proto",
        "//cpp/src/data_structure:data_structure"
    ],
)

cc_library(
    name = "model",
    srcs = [
        "model.h",
        "model.cpp"
    ],
    deps = [
        "@org_tensorflow//tensorflow/cc/saved_model:loader",
        "//conf:conf_cc_proto",
    ],
)

cc_library(
    name = "resource_manager",
    srcs = ["resource_manager.h", "resource_manager.cpp"],
    deps = [
        "//conf:conf_cc_proto",
        "//cpp/src/utils:fixed_deque",
        "//cpp/src/utils:protobuf_utils",
        "@com_github_gflags_gflags//:gflags",
        "//cpp/src/data_structure:data_structure"
    ],
)

cc_library(
    name = "pit",
    srcs = ["pit.h", "pit.cpp"],
    deps = [":resource_manager",
            "//cpp/src/strategy:strategy"],
)

cc_library(
    name = "model_manager",
    srcs = ["model_manager.h"],
    deps = [
        ":model",
        ":resource_manager",
        "//conf:conf_cc_proto",
        "//cpp/src/utils:protobuf_utils",
    ],
)


cc_library(
    name = "engine",
    srcs = ["engine.h", "engine.cpp"],
    deps = [],
)