load("@org_tensorflow//tensorflow:tensorflow.bzl", "tf_cc_binary")

cc_binary(
    name = "test_conf",
    srcs = [
        "test_conf.cpp",
    ],
    data = [
        "//conf:conf.pbtxt",
    ],
    deps = [
        "//conf:conf_cc_proto",
    ],
)

cc_binary(
    name = "test_board",
    srcs = [
        "test_board.cpp",
    ],
    data = [
        "//conf:conf.pbtxt",
    ],
    deps = [
        "//cpp/src:board",
    ],
)

cc_binary(
    name = "test_model",
    srcs = [
        "test_model.cpp",
    ],
    deps = [
        "//cpp/src:model",
    ],
)

cc_binary(
    name = "test_play",
    srcs = [
        "test_play.cpp",
    ],
    deps = [
        "//cpp/src:pit",
        "@com_github_gflags_gflags//:gflags",
        "@com_github_google_glog//:glog",
        "//cpp/src/strategy:random",
        "//cpp/src/strategy:mcts"
    ],
)

cc_binary(
    name = "test_dirichlet",
    srcs = [
        "test_dirichlet.cpp",
    ],
    deps = [
        "//cpp/src/utils:dirichlet",
    ],
)

cc_binary(
    name = "test_eigen",
    srcs = [
        "test_eigen.cpp",
    ],
    deps = [
        "//cpp/src/third_party/eigen-3.3.9:eigen",
    ],
)
