package(default_visibility = ["//visibility:public"])

cc_library(
    name = "thread",
    srcs = [
        "thread.h"
    ],
    deps = [
        "@com_github_google_glog//:glog",
    ]
)

cc_library(
    name = "fixed_deque",
    srcs = [
        "fixed_deque.h"
    ],
    deps = [
        "@com_google_absl//absl/synchronization:synchronization"
    ]
)

cc_binary(
    name = "protobuf_utils",
    srcs = [
        "protobuf_utils.h",
    ],
    deps = [
        "//conf:conf_cc_proto",
    ],
)