package(default_visibility = ["//visibility:public"])

cc_library(
    name = "strategy_h",
    srcs = ["strategy.h"],
    deps = [
        "//cpp/src:board",
        "//cpp/src/data_structure",
    ],
)

cc_library(
    name = "experts",
    srcs = [
        "experts.h",
        "experts.cpp",
    ],
    deps = [
        "//cpp/src:model_manager",
    ],
)

cc_library(
    name = "mcts",
    srcs = [
        "mcts_strategy.cpp",
        "mcts_strategy.h",
    ],
    deps = [
        ":strategy_h",
        "//cpp/src:board",
        "//cpp/src:model_manager",
        "//cpp/src:resource_manager",
        "//cpp/src/data_structure",
        "//cpp/src/utils:dirichlet",
    ],
)

cc_library(
    name = "random",
    srcs = [
        "random_strategy.cpp",
        "random_strategy.h",
    ],
    deps = [
        ":strategy_h",
        "//cpp/src:board",
        "//cpp/src:resource_manager"
    ],
)

cc_library(
    name = "strategy",
    deps = [
        ":mcts",
        ":random",
    ],
)