package(default_visibility = ["//visibility:public"])

cc_library(
    name = "strategy_h",
    srcs = ["strategy.h"],
    deps = [
        "//cpp/src:board",
        "//cpp/src/data_structure",
    ],
)

cc_library(
    name = "expert",
    srcs = [
        "expert.h",
    ],
    deps = [
        "//cpp/src/data_structure",
    ]
)

cc_library(
    name = "random_expert",
    srcs = [
        "random_expert.h",
        "random_expert.cpp"
    ],
    deps = [":expert"],
)

cc_library(
    name = "model_expert",
    srcs = [
        "model_expert.h",
        "model_expert.cpp"
    ],
    deps = [
        ":expert",
        "//cpp/src:model_manager"
    ],
)

cc_library(
    name = "mcts",
    srcs = [
        "mcts_strategy.cpp",
        "mcts_strategy.h",
    ],
    deps = [
        ":strategy_h",
        ":expert",
        "//cpp/src:board",
        # "//cpp/src:model_manager",
        # "//cpp/src:resource_manager",
        "//cpp/src/data_structure",
        "//cpp/src/utils:dirichlet",
    ],
)

cc_library(
    name = "random",
    srcs = [
        "random_strategy.cpp",
        "random_strategy.h",
    ],
    deps = [
        ":strategy_h",
        "//cpp/src:board",
    ],
)

cc_library(
    name = "strategy",
    deps = [
        ":mcts",
        ":random",
    ],
)