package(default_visibility = ["//visibility:public"])

cc_library(
    name = "thread",
    srcs = [
        "thread.h",
    ],
    deps = [
        "@com_github_google_glog//:glog",
    ],
)

cc_library(
    name = "fixed_deque",
    srcs = [
        "fixed_deque.h",
    ],
    deps = [
        "@com_google_absl//absl/synchronization",
    ],
)

cc_library(
    name = "protobuf_utils",
    srcs = [
        "protobuf_utils.cpp",
        "protobuf_utils.h",
    ],
    deps = [
        "//conf:conf_cc_proto",
    ],
)

cc_library(
    name = "thread_pool",
    srcs = ["thread_pool.h"],
)

cc_library(
    name = "dirichlet",
    srcs = ["dirichlet.h"],
    deps = [],
)
